lgbm kaggle adapted

--- a/notebook/001_data_check.ipynb
+++ b/notebook/001_data_check.ipynb
@@ -491,6 +491,56 @@
    "source": [
     "train.tail()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "timestamp         0\n",
+       "Asset_ID          0\n",
+       "Count             0\n",
+       "Open              0\n",
+       "High              0\n",
+       "Low               0\n",
+       "Close             0\n",
+       "Volume            0\n",
+       "VWAP              9\n",
+       "Target       750338\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(23486465, 10)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.dropna().shape"
+   ]
   }
  ],
  "metadata": {
