--- a/notebook/001_data_check.ipynb
+++ b/notebook/001_data_check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "4     25.8770   121.087310     25.891363 -0.008264  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
        "max    6.467053e+04  6.480854e+04  7.597554e+08           inf  9.641699e-01  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
        "(24236806, 10)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,16 +352,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train.to_pickle(data_path+'train.pkl')"
+    "# train.to_pickle(data_path+'train.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
        "24236805   232.275000  1.035123e+02   232.569697     NaN  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +494,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>Asset_ID</th>\n",
+       "      <th>Count</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>VWAP</th>\n",
+       "      <th>Target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1514764860</td>\n",
+       "      <td>1</td>\n",
+       "      <td>229.0</td>\n",
+       "      <td>13835.194</td>\n",
+       "      <td>14013.8</td>\n",
+       "      <td>13666.11</td>\n",
+       "      <td>13850.176</td>\n",
+       "      <td>31.550062</td>\n",
+       "      <td>13827.062093</td>\n",
+       "      <td>-0.014643</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1514764920</td>\n",
+       "      <td>1</td>\n",
+       "      <td>235.0</td>\n",
+       "      <td>13835.036</td>\n",
+       "      <td>14052.3</td>\n",
+       "      <td>13680.00</td>\n",
+       "      <td>13828.102</td>\n",
+       "      <td>31.046432</td>\n",
+       "      <td>13840.362591</td>\n",
+       "      <td>-0.015037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>1514764980</td>\n",
+       "      <td>1</td>\n",
+       "      <td>528.0</td>\n",
+       "      <td>13823.900</td>\n",
+       "      <td>14000.4</td>\n",
+       "      <td>13601.00</td>\n",
+       "      <td>13801.314</td>\n",
+       "      <td>55.061820</td>\n",
+       "      <td>13806.068014</td>\n",
+       "      <td>-0.010309</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>1514765040</td>\n",
+       "      <td>1</td>\n",
+       "      <td>435.0</td>\n",
+       "      <td>13802.512</td>\n",
+       "      <td>13999.0</td>\n",
+       "      <td>13576.28</td>\n",
+       "      <td>13768.040</td>\n",
+       "      <td>38.780529</td>\n",
+       "      <td>13783.598101</td>\n",
+       "      <td>-0.008999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>1514765100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>742.0</td>\n",
+       "      <td>13766.000</td>\n",
+       "      <td>13955.9</td>\n",
+       "      <td>13554.44</td>\n",
+       "      <td>13724.914</td>\n",
+       "      <td>108.501637</td>\n",
+       "      <td>13735.586842</td>\n",
+       "      <td>-0.008079</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     timestamp  Asset_ID  Count       Open     High       Low      Close  \\\n",
+       "2   1514764860         1  229.0  13835.194  14013.8  13666.11  13850.176   \n",
+       "10  1514764920         1  235.0  13835.036  14052.3  13680.00  13828.102   \n",
+       "18  1514764980         1  528.0  13823.900  14000.4  13601.00  13801.314   \n",
+       "26  1514765040         1  435.0  13802.512  13999.0  13576.28  13768.040   \n",
+       "34  1514765100         1  742.0  13766.000  13955.9  13554.44  13724.914   \n",
+       "\n",
+       "        Volume          VWAP    Target  \n",
+       "2    31.550062  13827.062093 -0.014643  \n",
+       "10   31.046432  13840.362591 -0.015037  \n",
+       "18   55.061820  13806.068014 -0.010309  \n",
+       "26   38.780529  13783.598101 -0.008999  \n",
+       "34  108.501637  13735.586842 -0.008079  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train[train.Asset_ID==1].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +646,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +666,7 @@
        "(23486465, 10)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +917,7 @@
        "[2015112 rows x 11 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +952,7 @@
        " 4: 3.555348061489413}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1231,7 @@
        "[2015112 rows x 12 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
