--- a/notebook/001_data_check.ipynb
+++ b/notebook/001_data_check.ipynb
@@ -21,7 +21,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Timestamp('2018-01-01 00:01:00'), Timestamp('2021-09-21 00:00:00'))"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "train['datetime'] = pd.to_datetime(train['timestamp'], unit='s')\n",
+    "np.min(train.datetime), np.max(train.datetime)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -55,6 +77,7 @@
        "      <th>Volume</th>\n",
        "      <th>VWAP</th>\n",
        "      <th>Target</th>\n",
+       "      <th>datetime</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -70,6 +93,7 @@
        "      <td>19.233005</td>\n",
        "      <td>2373.116392</td>\n",
        "      <td>-0.004218</td>\n",
+       "      <td>2018-01-01 00:01:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -83,6 +107,7 @@
        "      <td>78.380000</td>\n",
        "      <td>8.530000</td>\n",
        "      <td>-0.014399</td>\n",
+       "      <td>2018-01-01 00:01:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -96,6 +121,7 @@
        "      <td>31.550062</td>\n",
        "      <td>13827.062093</td>\n",
        "      <td>-0.014643</td>\n",
+       "      <td>2018-01-01 00:01:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -109,6 +135,7 @@
        "      <td>6626.713370</td>\n",
        "      <td>7.657713</td>\n",
        "      <td>-0.013922</td>\n",
+       "      <td>2018-01-01 00:01:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -122,6 +149,7 @@
        "      <td>121.087310</td>\n",
        "      <td>25.891363</td>\n",
        "      <td>-0.008264</td>\n",
+       "      <td>2018-01-01 00:01:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -135,15 +163,15 @@
        "3  1514764860         5   32.0      7.6596      7.6596      7.6567   \n",
        "4  1514764860         7    5.0     25.9200     25.9200     25.8740   \n",
        "\n",
-       "        Close       Volume          VWAP    Target  \n",
-       "0   2374.5900    19.233005   2373.116392 -0.004218  \n",
-       "1      8.5300    78.380000      8.530000 -0.014399  \n",
-       "2  13850.1760    31.550062  13827.062093 -0.014643  \n",
-       "3      7.6576  6626.713370      7.657713 -0.013922  \n",
-       "4     25.8770   121.087310     25.891363 -0.008264  "
+       "        Close       Volume          VWAP    Target            datetime  \n",
+       "0   2374.5900    19.233005   2373.116392 -0.004218 2018-01-01 00:01:00  \n",
+       "1      8.5300    78.380000      8.530000 -0.014399 2018-01-01 00:01:00  \n",
+       "2  13850.1760    31.550062  13827.062093 -0.014643 2018-01-01 00:01:00  \n",
+       "3      7.6576  6626.713370      7.657713 -0.013922 2018-01-01 00:01:00  \n",
+       "4     25.8770   121.087310     25.891363 -0.008264 2018-01-01 00:01:00  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +349,7 @@
        "max    6.467053e+04  6.480854e+04  7.597554e+08           inf  9.641699e-01  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,16 +360,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(24236806, 10)"
+       "(24236806, 11)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,144 +380,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# train.to_pickle(data_path+'train.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>Asset_ID</th>\n",
-       "      <th>Count</th>\n",
-       "      <th>Open</th>\n",
-       "      <th>High</th>\n",
-       "      <th>Low</th>\n",
-       "      <th>Close</th>\n",
-       "      <th>Volume</th>\n",
-       "      <th>VWAP</th>\n",
-       "      <th>Target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>24236801</th>\n",
-       "      <td>1632182400</td>\n",
-       "      <td>9</td>\n",
-       "      <td>775.0</td>\n",
-       "      <td>157.181571</td>\n",
-       "      <td>157.250000</td>\n",
-       "      <td>156.700000</td>\n",
-       "      <td>156.943857</td>\n",
-       "      <td>4.663725e+03</td>\n",
-       "      <td>156.994319</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24236802</th>\n",
-       "      <td>1632182400</td>\n",
-       "      <td>10</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>2437.065067</td>\n",
-       "      <td>2438.000000</td>\n",
-       "      <td>2430.226900</td>\n",
-       "      <td>2432.907467</td>\n",
-       "      <td>3.975460e+00</td>\n",
-       "      <td>2434.818747</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24236803</th>\n",
-       "      <td>1632182400</td>\n",
-       "      <td>13</td>\n",
-       "      <td>380.0</td>\n",
-       "      <td>0.091390</td>\n",
-       "      <td>0.091527</td>\n",
-       "      <td>0.091260</td>\n",
-       "      <td>0.091349</td>\n",
-       "      <td>2.193732e+06</td>\n",
-       "      <td>0.091388</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24236804</th>\n",
-       "      <td>1632182400</td>\n",
-       "      <td>12</td>\n",
-       "      <td>177.0</td>\n",
-       "      <td>0.282168</td>\n",
-       "      <td>0.282438</td>\n",
-       "      <td>0.281842</td>\n",
-       "      <td>0.282051</td>\n",
-       "      <td>1.828508e+05</td>\n",
-       "      <td>0.282134</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24236805</th>\n",
-       "      <td>1632182400</td>\n",
-       "      <td>11</td>\n",
-       "      <td>48.0</td>\n",
-       "      <td>232.695000</td>\n",
-       "      <td>232.800000</td>\n",
-       "      <td>232.240000</td>\n",
-       "      <td>232.275000</td>\n",
-       "      <td>1.035123e+02</td>\n",
-       "      <td>232.569697</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           timestamp  Asset_ID  Count         Open         High          Low  \\\n",
-       "24236801  1632182400         9  775.0   157.181571   157.250000   156.700000   \n",
-       "24236802  1632182400        10   34.0  2437.065067  2438.000000  2430.226900   \n",
-       "24236803  1632182400        13  380.0     0.091390     0.091527     0.091260   \n",
-       "24236804  1632182400        12  177.0     0.282168     0.282438     0.281842   \n",
-       "24236805  1632182400        11   48.0   232.695000   232.800000   232.240000   \n",
-       "\n",
-       "                Close        Volume         VWAP  Target  \n",
-       "24236801   156.943857  4.663725e+03   156.994319     NaN  \n",
-       "24236802  2432.907467  3.975460e+00  2434.818747     NaN  \n",
-       "24236803     0.091349  2.193732e+06     0.091388     NaN  \n",
-       "24236804     0.282051  1.828508e+05     0.282134     NaN  \n",
-       "24236805   232.275000  1.035123e+02   232.569697     NaN  "
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train.tail()"
    ]
   },
   {
@@ -528,6 +423,146 @@
        "      <th>Volume</th>\n",
        "      <th>VWAP</th>\n",
        "      <th>Target</th>\n",
+       "      <th>datetime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>24236801</th>\n",
+       "      <td>1632182400</td>\n",
+       "      <td>9</td>\n",
+       "      <td>775.0</td>\n",
+       "      <td>157.181571</td>\n",
+       "      <td>157.250000</td>\n",
+       "      <td>156.700000</td>\n",
+       "      <td>156.943857</td>\n",
+       "      <td>4.663725e+03</td>\n",
+       "      <td>156.994319</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021-09-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24236802</th>\n",
+       "      <td>1632182400</td>\n",
+       "      <td>10</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>2437.065067</td>\n",
+       "      <td>2438.000000</td>\n",
+       "      <td>2430.226900</td>\n",
+       "      <td>2432.907467</td>\n",
+       "      <td>3.975460e+00</td>\n",
+       "      <td>2434.818747</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021-09-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24236803</th>\n",
+       "      <td>1632182400</td>\n",
+       "      <td>13</td>\n",
+       "      <td>380.0</td>\n",
+       "      <td>0.091390</td>\n",
+       "      <td>0.091527</td>\n",
+       "      <td>0.091260</td>\n",
+       "      <td>0.091349</td>\n",
+       "      <td>2.193732e+06</td>\n",
+       "      <td>0.091388</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021-09-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24236804</th>\n",
+       "      <td>1632182400</td>\n",
+       "      <td>12</td>\n",
+       "      <td>177.0</td>\n",
+       "      <td>0.282168</td>\n",
+       "      <td>0.282438</td>\n",
+       "      <td>0.281842</td>\n",
+       "      <td>0.282051</td>\n",
+       "      <td>1.828508e+05</td>\n",
+       "      <td>0.282134</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021-09-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24236805</th>\n",
+       "      <td>1632182400</td>\n",
+       "      <td>11</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>232.695000</td>\n",
+       "      <td>232.800000</td>\n",
+       "      <td>232.240000</td>\n",
+       "      <td>232.275000</td>\n",
+       "      <td>1.035123e+02</td>\n",
+       "      <td>232.569697</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021-09-21</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           timestamp  Asset_ID  Count         Open         High          Low  \\\n",
+       "24236801  1632182400         9  775.0   157.181571   157.250000   156.700000   \n",
+       "24236802  1632182400        10   34.0  2437.065067  2438.000000  2430.226900   \n",
+       "24236803  1632182400        13  380.0     0.091390     0.091527     0.091260   \n",
+       "24236804  1632182400        12  177.0     0.282168     0.282438     0.281842   \n",
+       "24236805  1632182400        11   48.0   232.695000   232.800000   232.240000   \n",
+       "\n",
+       "                Close        Volume         VWAP  Target   datetime  \n",
+       "24236801   156.943857  4.663725e+03   156.994319     NaN 2021-09-21  \n",
+       "24236802  2432.907467  3.975460e+00  2434.818747     NaN 2021-09-21  \n",
+       "24236803     0.091349  2.193732e+06     0.091388     NaN 2021-09-21  \n",
+       "24236804     0.282051  1.828508e+05     0.282134     NaN 2021-09-21  \n",
+       "24236805   232.275000  1.035123e+02   232.569697     NaN 2021-09-21  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>Asset_ID</th>\n",
+       "      <th>Count</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>VWAP</th>\n",
+       "      <th>Target</th>\n",
+       "      <th>datetime</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -543,6 +578,7 @@
        "      <td>31.550062</td>\n",
        "      <td>13827.062093</td>\n",
        "      <td>-0.014643</td>\n",
+       "      <td>2018-01-01 00:01:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -556,6 +592,7 @@
        "      <td>31.046432</td>\n",
        "      <td>13840.362591</td>\n",
        "      <td>-0.015037</td>\n",
+       "      <td>2018-01-01 00:02:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
@@ -569,6 +606,7 @@
        "      <td>55.061820</td>\n",
        "      <td>13806.068014</td>\n",
        "      <td>-0.010309</td>\n",
+       "      <td>2018-01-01 00:03:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
@@ -582,6 +620,7 @@
        "      <td>38.780529</td>\n",
        "      <td>13783.598101</td>\n",
        "      <td>-0.008999</td>\n",
+       "      <td>2018-01-01 00:04:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>34</th>\n",
@@ -595,6 +634,7 @@
        "      <td>108.501637</td>\n",
        "      <td>13735.586842</td>\n",
        "      <td>-0.008079</td>\n",
+       "      <td>2018-01-01 00:05:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -608,15 +648,15 @@
        "26  1514765040         1  435.0  13802.512  13999.0  13576.28  13768.040   \n",
        "34  1514765100         1  742.0  13766.000  13955.9  13554.44  13724.914   \n",
        "\n",
-       "        Volume          VWAP    Target  \n",
-       "2    31.550062  13827.062093 -0.014643  \n",
-       "10   31.046432  13840.362591 -0.015037  \n",
-       "18   55.061820  13806.068014 -0.010309  \n",
-       "26   38.780529  13783.598101 -0.008999  \n",
-       "34  108.501637  13735.586842 -0.008079  "
+       "        Volume          VWAP    Target            datetime  \n",
+       "2    31.550062  13827.062093 -0.014643 2018-01-01 00:01:00  \n",
+       "10   31.046432  13840.362591 -0.015037 2018-01-01 00:02:00  \n",
+       "18   55.061820  13806.068014 -0.010309 2018-01-01 00:03:00  \n",
+       "26   38.780529  13783.598101 -0.008999 2018-01-01 00:04:00  \n",
+       "34  108.501637  13735.586842 -0.008079 2018-01-01 00:05:00  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -643,10 +683,11 @@
        "Volume            0\n",
        "VWAP              9\n",
        "Target       750338\n",
+       "datetime          0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,16 +698,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(23486465, 10)"
+       "(23486465, 11)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +958,7 @@
        "[2015112 rows x 11 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +993,7 @@
        " 4: 3.555348061489413}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -967,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1272,7 @@
        "[2015112 rows x 12 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
