lgbm012 timestamp delete

--- a/notebook/010_running_mean.ipynb
+++ b/notebook/010_running_mean.ipynb
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-01-13T10:47:57.967888Z",
@@ -252,115 +252,274 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[2374.59         19.23300519]\n",
-      " [2372.28666667   24.05025946]\n",
-      " [2372.06333333   42.67643847]\n",
-      " ...\n",
-      " [ 538.775        49.33352893]\n",
-      " [ 542.5125      183.53930349]\n",
-      " [ 541.045       582.83068788]]\n",
-      "[[   8.53         78.38      ]\n",
-      " [   8.5145       71.39      ]\n",
-      " [   8.4848     1546.82      ]\n",
-      " ...\n",
-      " [ 361.858       820.90973643]\n",
-      " [ 364.1145     1268.05516974]\n",
-      " [ 363.7575     1000.67694636]]\n",
-      "[[1.38501760e+04 3.15500615e+01]\n",
-      " [1.38281020e+04 3.10464321e+01]\n",
-      " [1.38013140e+04 5.50618201e+01]\n",
-      " ...\n",
-      " [4.28270200e+04 6.56777342e+01]\n",
-      " [4.30172771e+04 1.38335477e+02]\n",
-      " [4.30025050e+04 1.28206820e+02]]\n",
-      "[[7.65760000e+00 6.62671337e+03]\n",
-      " [7.65670000e+00 3.27747549e+03]\n",
-      " [7.65120000e+00 5.62355758e+03]\n",
-      " ...\n",
-      " [4.17573333e+00 1.82688028e+04]\n",
-      " [4.19873333e+00 7.79936035e+04]\n",
-      " [4.19574000e+00 4.10643936e+04]]\n",
-      "[[2.58770000e+01 1.21087310e+02]\n",
-      " [2.58970000e+01 1.46801900e+00]\n",
-      " [2.64695000e+01 7.61639216e+01]\n",
-      " ...\n",
-      " [4.88267667e+01 5.74742717e+02]\n",
-      " [4.90782750e+01 3.26924016e+03]\n",
-      " [4.90681500e+01 1.43435052e+03]]\n",
-      "[[ 738.5075      335.98785619]\n",
-      " [ 738.26        232.79314112]\n",
-      " [ 737.5025      174.13803124]\n",
-      " ...\n",
-      " [2957.39857143  807.93536195]\n",
-      " [2977.19       1723.47397939]\n",
-      " [2972.60333333 1204.82571017]]\n",
-      "[[ 225.20666667  411.89664234]\n",
-      " [ 224.85666667 3640.5027059 ]\n",
-      " [ 226.          328.35028572]\n",
-      " ...\n",
-      " [ 156.314      1249.62003537]\n",
-      " [ 157.225      2053.65752904]\n",
-      " [ 156.94385714 4663.72542013]]\n",
-      "[[329.46         6.63571014]\n",
-      " [329.45         0.34941958]\n",
-      " [329.19         1.18955308]\n",
-      " ...\n",
-      " [231.1525     123.4183    ]\n",
-      " [232.258      115.24236543]\n",
-      " [232.275      103.5123    ]]\n",
-      "[[3.67500000e-02 8.34591077e+04]\n",
-      " [3.69490000e-02 2.22200006e+03]\n",
-      " [3.55970000e-02 1.06137661e+05]\n",
-      " ...\n",
-      " [9.08590000e-02 3.69910232e+06]\n",
-      " [9.13256000e-02 3.24150709e+06]\n",
-      " [9.13487500e-02 2.19373156e+06]]\n",
-      "[[3.60000000e-01 3.77936293e+03]\n",
-      " [4.10000000e-01 8.00000000e+02]\n",
-      " [4.70000000e-01 4.00000000e+02]\n",
-      " ...\n",
-      " [2.80435333e-01 9.23223539e+04]\n",
-      " [2.82077500e-01 6.81270710e+05]\n",
-      " [2.82050571e-01 1.82850814e+05]]\n",
-      "[[2.60000000e-01 3.22308322e+04]\n",
-      " [2.60000000e-01 1.87112286e+04]\n",
-      " [2.58700000e-01 6.83140570e+03]\n",
-      " ...\n",
-      " [2.06490067e+00 3.92212249e+05]\n",
-      " [2.08033667e+00 7.21884159e+05]\n",
-      " [2.07926850e+00 1.65056022e+05]]\n",
-      "[[2.26300000e+00 1.09523610e+03]\n",
-      " [2.26310000e+00 3.83066900e+02]\n",
-      " [2.26340000e+00 1.70307900e+02]\n",
-      " ...\n",
-      " [1.27500000e+00 8.68866240e+03]\n",
-      " [1.28455000e+00 1.13142341e+04]\n",
-      " [1.28255000e+00 8.54240670e+03]]\n",
-      "[[1.18200000e+03 4.54920800e-02]\n",
-      " [1.49600000e+03 1.95000000e-01]\n",
-      " [1.49600000e+03 7.00000000e-02]\n",
-      " ...\n",
-      " [2.42111200e+03 8.95394300e+00]\n",
-      " [2.43565225e+03 6.10746600e+00]\n",
-      " [2.43290747e+03 3.97546000e+00]]\n",
-      "[[2.77500000e-03 1.92109000e+05]\n",
-      " [2.77500000e-03 7.03990000e+04]\n",
-      " [2.77200000e-03 2.17483000e+05]\n",
-      " ...\n",
-      " [2.06797000e-01 4.20172523e+05]\n",
-      " [2.08621250e-01 2.58398051e+06]\n",
-      " [2.08294250e-01 1.14094599e+06]]\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>Asset_ID</th>\n",
+       "      <th>Count</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>VWAP</th>\n",
+       "      <th>Target</th>\n",
+       "      <th>close_rm</th>\n",
+       "      <th>volume_rm</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1514764860</td>\n",
+       "      <td>2</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>2376.580000</td>\n",
+       "      <td>2399.500000</td>\n",
+       "      <td>2357.140000</td>\n",
+       "      <td>2374.590000</td>\n",
+       "      <td>1.923301e+01</td>\n",
+       "      <td>2373.116392</td>\n",
+       "      <td>-0.004218</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2374.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1514764860</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>8.530000</td>\n",
+       "      <td>8.530000</td>\n",
+       "      <td>8.530000</td>\n",
+       "      <td>8.530000</td>\n",
+       "      <td>7.838000e+01</td>\n",
+       "      <td>8.530000</td>\n",
+       "      <td>-0.014399</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>78.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1514764860</td>\n",
+       "      <td>1</td>\n",
+       "      <td>229.0</td>\n",
+       "      <td>13835.194000</td>\n",
+       "      <td>14013.800000</td>\n",
+       "      <td>13666.110000</td>\n",
+       "      <td>13850.176000</td>\n",
+       "      <td>3.155006e+01</td>\n",
+       "      <td>13827.062093</td>\n",
+       "      <td>-0.014643</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1514764860</td>\n",
+       "      <td>5</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>7.659600</td>\n",
+       "      <td>7.659600</td>\n",
+       "      <td>7.656700</td>\n",
+       "      <td>7.657600</td>\n",
+       "      <td>6.626713e+03</td>\n",
+       "      <td>7.657713</td>\n",
+       "      <td>-0.013922</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1514764860</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>25.920000</td>\n",
+       "      <td>25.920000</td>\n",
+       "      <td>25.874000</td>\n",
+       "      <td>25.877000</td>\n",
+       "      <td>1.210873e+02</td>\n",
+       "      <td>25.891363</td>\n",
+       "      <td>-0.008264</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24236801</th>\n",
+       "      <td>1632182400</td>\n",
+       "      <td>9</td>\n",
+       "      <td>775.0</td>\n",
+       "      <td>157.181571</td>\n",
+       "      <td>157.250000</td>\n",
+       "      <td>156.700000</td>\n",
+       "      <td>156.943857</td>\n",
+       "      <td>4.663725e+03</td>\n",
+       "      <td>156.994319</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24236802</th>\n",
+       "      <td>1632182400</td>\n",
+       "      <td>10</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>2437.065067</td>\n",
+       "      <td>2438.000000</td>\n",
+       "      <td>2430.226900</td>\n",
+       "      <td>2432.907467</td>\n",
+       "      <td>3.975460e+00</td>\n",
+       "      <td>2434.818747</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24236803</th>\n",
+       "      <td>1632182400</td>\n",
+       "      <td>13</td>\n",
+       "      <td>380.0</td>\n",
+       "      <td>0.091390</td>\n",
+       "      <td>0.091527</td>\n",
+       "      <td>0.091260</td>\n",
+       "      <td>0.091349</td>\n",
+       "      <td>2.193732e+06</td>\n",
+       "      <td>0.091388</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24236804</th>\n",
+       "      <td>1632182400</td>\n",
+       "      <td>12</td>\n",
+       "      <td>177.0</td>\n",
+       "      <td>0.282168</td>\n",
+       "      <td>0.282438</td>\n",
+       "      <td>0.281842</td>\n",
+       "      <td>0.282051</td>\n",
+       "      <td>1.828508e+05</td>\n",
+       "      <td>0.282134</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24236805</th>\n",
+       "      <td>1632182400</td>\n",
+       "      <td>11</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>232.695000</td>\n",
+       "      <td>232.800000</td>\n",
+       "      <td>232.240000</td>\n",
+       "      <td>232.275000</td>\n",
+       "      <td>1.035123e+02</td>\n",
+       "      <td>232.569697</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>24236806 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           timestamp  Asset_ID  Count          Open          High  \\\n",
+       "0         1514764860         2   40.0   2376.580000   2399.500000   \n",
+       "1         1514764860         0    5.0      8.530000      8.530000   \n",
+       "2         1514764860         1  229.0  13835.194000  14013.800000   \n",
+       "3         1514764860         5   32.0      7.659600      7.659600   \n",
+       "4         1514764860         7    5.0     25.920000     25.920000   \n",
+       "...              ...       ...    ...           ...           ...   \n",
+       "24236801  1632182400         9  775.0    157.181571    157.250000   \n",
+       "24236802  1632182400        10   34.0   2437.065067   2438.000000   \n",
+       "24236803  1632182400        13  380.0      0.091390      0.091527   \n",
+       "24236804  1632182400        12  177.0      0.282168      0.282438   \n",
+       "24236805  1632182400        11   48.0    232.695000    232.800000   \n",
+       "\n",
+       "                   Low         Close        Volume          VWAP    Target  \\\n",
+       "0          2357.140000   2374.590000  1.923301e+01   2373.116392 -0.004218   \n",
+       "1             8.530000      8.530000  7.838000e+01      8.530000 -0.014399   \n",
+       "2         13666.110000  13850.176000  3.155006e+01  13827.062093 -0.014643   \n",
+       "3             7.656700      7.657600  6.626713e+03      7.657713 -0.013922   \n",
+       "4            25.874000     25.877000  1.210873e+02     25.891363 -0.008264   \n",
+       "...                ...           ...           ...           ...       ...   \n",
+       "24236801    156.700000    156.943857  4.663725e+03    156.994319       NaN   \n",
+       "24236802   2430.226900   2432.907467  3.975460e+00   2434.818747       NaN   \n",
+       "24236803      0.091260      0.091349  2.193732e+06      0.091388       NaN   \n",
+       "24236804      0.281842      0.282051  1.828508e+05      0.282134       NaN   \n",
+       "24236805    232.240000    232.275000  1.035123e+02    232.569697       NaN   \n",
+       "\n",
+       "          close_rm  volume_rm  \n",
+       "0              NaN    2374.59  \n",
+       "1              NaN      78.38  \n",
+       "2              NaN        NaN  \n",
+       "3              NaN        NaN  \n",
+       "4              NaN        NaN  \n",
+       "...            ...        ...  \n",
+       "24236801       NaN        NaN  \n",
+       "24236802       NaN        NaN  \n",
+       "24236803       NaN        NaN  \n",
+       "24236804       NaN        NaN  \n",
+       "24236805       NaN        NaN  \n",
+       "\n",
+       "[24236806 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "for i in train.Asset_ID.unique():\n",
     "    a = RunningMean(WIN_SIZE=5)\n",
     "    a.push(train.loc[train.Asset_ID==i, ['Close', 'Volume']].values)\n",
-    "    print(a.get_mean())\n"
+    "    mean = a.get_mean()\n",
+    "    train.loc[train.Asset_ID==i, 'close_rm'], train.loc[train.Asset_ID==i, 'volume_rm'] = pd.Series(mean[: 0].reshape(-1)), pd.Series(mean[: 1].reshape(-1)) \n",
+    "train"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "RSIめっちゃ遅かった\n",
+    "talib使って早くなった"
    ]
   },
   {
